--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
 body{
     height: 100%;
     background-color: rgb(15, 0, 31);
-    
+    overflow-y: hidden;
 }
 
 @keyframes fade{
@@ -123,6 +123,9 @@ h5:hover , img:hover{
     text-shadow: 0px 0px 5px#fff;
 }
 @media screen and (max-width:1199px) {
+    body{
+        overflow-y: scroll;
+    }
     .grid-cont{
         height: 100%;
         grid-template-rows: 50% 70%;
